--- a/V1.0/contact.html
+++ b/V1.0/contact.html
@@ -188,6 +188,192 @@
 
     </section><!-- /Contact Section -->
 
+    <!-- Testimonials 4 Section -->
+    <section id="testimonials-4" class="testimonials-4 section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Testimonials</h2>
+        <p>Here's what our clients are saying</p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt=""> -->
+              <h3>Saul Goodman</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  Good evening Dr. Linda,<br><br>
+                  Your entire team is truly wonderful. For the longest time, 
+                  I wished I had someone who wouldn't judge when it came to sexual health topics. 
+                  When I discovered Pink Care, I felt so relieved, especially after seeing your Instagram. 
+                  It's a safe space, particularly for young girls like me, and I'm incredibly grateful.<br><br>
+                  I wanted to update you: my recent chlamydia test came back negative. 
+                  I'm so thankful for the treatment. I didn't even know I had it for a long time, 
+                  but I'm glad I took the bold step to get myself checked thoroughly.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="testimonial-item">
+              <h3>Sara Wilsson</h3>
+              <h4>Designer</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  I found myself talking about issues so freely with a doctor, 
+                  with no fear or trepidation of seeing a doctor. Thank you so much.<br><br>
+                  I went through my tests with ease, and enjoyed the smiles and banters 
+                  that put me at ease from the moment I arrived until I left.<br><br>
+                  I really felt at home and am grateful that I came across such beautiful souls. 
+                  You have a beautiful space. Your staff are very lovely, warm, and courteous too. 
+                  You make it easy for people like me to be at ease.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="testimonial-item">
+              <h3>Jena Karlis</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  Hello! The PCOS treatment has been truly effective. Thank you so much – I'm sleeping well, 
+                  and I no longer experience anxiety, depression, constant tiredness, 
+                  or waking up with headaches. I'm really looking forward to completing my course of treatment.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="testimonial-item">
+              <h3>Matt Brandon</h3>
+              <h4>Freelancer</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  PinkClinic offers friendly consultations with a consultant who truly listens and is always ready 
+                  to patiently attend to all – and I mean all – your needs. She also has a wonderfully contemporary, 'Gen Z' vibe.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="testimonial-item">
+              <h3>John Larson</h3>
+              <h4>Entrepreneur</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  The treatment plan you gave my husband worked wonders. 
+                  I changed my diet exactly as you instructed. 
+                  How I started ovulating all of a sudden is still a mystery to me – it just happened!<br><br>
+                  I also worked on my BMI as you instructed and stopped eating junk food. 
+                  Last month, I noticed cervical mucus after many months of dryness, 
+                  something I hadn't paid much attention to before. This truly feels like a blessing!
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Emily Harison</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  PinkClinic is, without a doubt, the best sexual health clinic in Nigeria. 
+                  I honestly did not regret my visit there. I felt treated like the only patient in the world, 
+                  leaving me feeling completely at peace and truly special. 
+                  I wholeheartedly recommend this place to everyone out there. 
+                  My advice: don't hesitate; embrace PinkClinic's services without fear. They are super amazing!
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Emily Harison</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  Fifteen years of chronic menstrual pain disappeared! I am so happy I found PinkClinic. 
+                  I remember hating my period because of the several embarrassments it caused me, 
+                  and at one point, I knew I desperately needed help. Thank you, PinkClinic – I feel brand new. 
+                  PinkClinic is truly a lifesaver. You are treated like a VIP.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Emily Harison</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  PinkClinic provides a safe space for everyone. 
+                  Thank you, PinkClinic, for offering a secure environment where individuals can openly discuss and address their sexual health challenges. 
+                  Your privacy is absolutely assured with PinkClinic. I highly commend them for their service.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Testimonials 4 Section -->
+
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
