--- a/V1.0/index.html
+++ b/V1.0/index.html
@@ -189,14 +189,15 @@
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
             <h3>Become free from Sexually Transmitted Infections (STIs).</h3>
             <p> 
-              At Pink Clinic, we can help you achieve an infection-free status in several ways.<br>
-              <ul>
-                <li>We listen actively and provide non-judgemental guidance and counselling. This helps manage the mental stress you experience, knowing your STI status.</li>      
+              At Pink Clinic, we can help you achieve an infection-free status in several ways:<br>
+              ✔	We listen actively and provide non-judgemental guidance and counselling. 
+              This helps manage the mental stress you experience, knowing your STI status. <br>  
 
-                <li>We undertake thorough screenings you can rely on so we know exactly what we are dealing with.</li>
+              ✔	We undertake thorough screenings you can rely on so we know exactly what we are dealing with.<br>
 
-                <li>Our treatment helps you become free from STIs. You restore your confidence so you can quickly get back to the life you have always known.</li>
-              </ul>
+              ✔	Our treatment helps you become free from STIs. 
+              You restore your confidence so you can quickly get back to the life you have always known.<br>
+              
             </p>
             <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment</a>
           </div>
@@ -222,7 +223,17 @@
 
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
             <h3>Get Help.</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> 
+              ✔	Safe Care <br>
+                          Our team of trained sexual health professionals ensures you get quality health care services 
+                          from start to finish<br>
+              ✔	Private & Confidentiality <br>
+                          No one has to know- we don’t kiss and tell. Every service at the clinic is confidential, 
+                          just the two of us. If a third person knows then it’s definitely from you. <br>
+              ✔	Non-Judgmental <br>
+                          We listen- we don’t judge. Tell it all to our team during your virtual or physical consultation<br>
+
+            </p>
             <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment</a>
           </div>
 
@@ -237,6 +248,7 @@
       </div>
 
     </section><!-- /Call To Action 2 Section -->
+
 
     <!-- Testimonials 4 Section -->
     <section id="testimonials-4" class="testimonials-4 section">
@@ -257,11 +269,20 @@
               <h3>Saul Goodman</h3>
               <h4>Store Owner</h4>
               <div class="stars">
-                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                <span>
+                  Good evening Dr. Linda,<br><br>
+                  Your entire team is truly wonderful. For the longest time, 
+                  I wished I had someone who wouldn't judge when it came to sexual health topics. 
+                  When I discovered Pink Care, I felt so relieved, especially after seeing your Instagram. 
+                  It's a safe space, particularly for young girls like me, and I'm incredibly grateful.<br><br>
+                  I wanted to update you: my recent chlamydia test came back negative. 
+                  I'm so thankful for the treatment. I didn't even know I had it for a long time, 
+                  but I'm glad I took the bold step to get myself checked thoroughly.
+                </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -276,7 +297,15 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                <span>
+                  I found myself talking about issues so freely with a doctor, 
+                  with no fear or trepidation of seeing a doctor. Thank you so much.<br><br>
+                  I went through my tests with ease, and enjoyed the smiles and banters 
+                  that put me at ease from the moment I arrived until I left.<br><br>
+                  I really felt at home and am grateful that I came across such beautiful souls. 
+                  You have a beautiful space. Your staff are very lovely, warm, and courteous too. 
+                  You make it easy for people like me to be at ease.
+                </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -291,7 +320,11 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                <span>
+                  Hello! The PCOS treatment has been truly effective. Thank you so much – I'm sleeping well, 
+                  and I no longer experience anxiety, depression, constant tiredness, 
+                  or waking up with headaches. I'm really looking forward to completing my course of treatment.
+                </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -302,11 +335,14 @@
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
               <div class="stars">
-                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                <span>
+                  PinkClinic offers friendly consultations with a consultant who truly listens and is always ready 
+                  to patiently attend to all – and I mean all – your needs. She also has a wonderfully contemporary, 'Gen Z' vibe.
+                </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -321,7 +357,14 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                <span>
+                  The treatment plan you gave my husband worked wonders. 
+                  I changed my diet exactly as you instructed. 
+                  How I started ovulating all of a sudden is still a mystery to me – it just happened!<br><br>
+                  I also worked on my BMI as you instructed and stopped eating junk food. 
+                  Last month, I noticed cervical mucus after many months of dryness, 
+                  something I hadn't paid much attention to before. This truly feels like a blessing!
+                </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -336,7 +379,52 @@
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Eius ipsam praesentium dolor quaerat inventore rerum odio. Quos laudantium adipisci eius. Accusamus qui iste cupiditate sed temporibus est aspernatur. Sequi officiis ea et quia quidem.</span>
+                <span>
+                  PinkClinic is, without a doubt, the best sexual health clinic in Nigeria. 
+                  I honestly did not regret my visit there. I felt treated like the only patient in the world, 
+                  leaving me feeling completely at peace and truly special. 
+                  I wholeheartedly recommend this place to everyone out there. 
+                  My advice: don't hesitate; embrace PinkClinic's services without fear. They are super amazing!
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Emily Harison</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  Fifteen years of chronic menstrual pain disappeared! I am so happy I found PinkClinic. 
+                  I remember hating my period because of the several embarrassments it caused me, 
+                  and at one point, I knew I desperately needed help. Thank you, PinkClinic – I feel brand new. 
+                  PinkClinic is truly a lifesaver. You are treated like a VIP.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Emily Harison</h3>
+              <h4>Store Owner</h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  PinkClinic provides a safe space for everyone. 
+                  Thank you, PinkClinic, for offering a secure environment where individuals can openly discuss and address their sexual health challenges. 
+                  Your privacy is absolutely assured with PinkClinic. I highly commend them for their service.
+                </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -348,7 +436,7 @@
 
     </section><!-- /Testimonials 4 Section -->
 
-   <!-- Stats Section -->
+   <!-- Stats Section 
    <section id="stats" class="stats section">
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -360,34 +448,34 @@
             <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
             <p>TikTok</p>
           </div>
-        </div><!-- End Stats Item -->
+        </div><!-- End Stats Item
 
         <div class="col-lg-3 col-md-6">
           <div class="stats-item text-center w-100 h-100">
             <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
             <p>Facebook</p>
           </div>
-        </div><!-- End Stats Item -->
+        </div><!-- End Stats Item 
 
         <div class="col-lg-3 col-md-6">
           <div class="stats-item text-center w-100 h-100">
             <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
             <p>Instagram</p>
           </div>
-        </div><!-- End Stats Item -->
+        </div><!-- End Stats Item 
 
         <div class="col-lg-3 col-md-6">
           <div class="stats-item text-center w-100 h-100">
             <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
             <p>Awards</p>
           </div>
-        </div><!-- End Stats Item -->
+        </div><!-- End Stats Item 
 
       </div>
 
     </div>
 
-  </section><!-- /Stats Section -->
+  </section> /Stats Section -->
 
   </main>
 
