Update dropdown menu

--- a/V1.0/blog.html
+++ b/V1.0/blog.html
@@ -62,15 +62,19 @@
             <li><a href="index.html">Home<br></a></li>
             <li class="dropdown #services"><a href="services.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="services.html#jump-one">STI Screening Package</a></li>
-                <li><a href="services.html#jump-two">Vaccinations</a></li>
-                <li><a href="services.html#jump-three">Birth Control / Family Planing</a></li>
-                <li><a href="services.html#jump-four">Vitamin Therapy</a></li>
-                <li><a href="services.html#jump-five">Pharmaceutical</a></li>
-                <li><a href="services.html#jump-six">Reproductive Health Care</a></li>
+                <li><a href="services.html#services">Our Services</a></li>
+                <li><a href="services.html#pricing">STI Screening Package</a></li>
+                <li><a href="services.html#infections">Common Infections</a></li>
               </ul>
             </li>
-            <li><a href="corporatecare.html">Corporate Care</a></li>
+            <li class="dropdown #corporatecare"><a href="corporatecare.html"><span>Corporate Care</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="corporatecare.html#corporateservice">Vaccinations</a></li>
+                <li><a href="corporatecare.html#corporateservice">Birth Control / Family Planing</a></li>
+                <li><a href="corporatecare.html#corporateservice">Vitamin Therapy</a></li>
+                <li><a href="corporatecare.html#coktailbenefits">Cocktail sets and Benefits</a></li>
+              </ul>
+            </li>
             <li><a href="#" class="active">Blog</a></li>
             <li><a href="faq.html">FAQs</a></li>
             <li><a href="contact.html">Contact</a></li>
