--- a/V1.0/corporatecare.html
+++ b/V1.0/corporatecare.html
@@ -62,15 +62,19 @@
             <li><a href="index.html">Home<br></a></li>
             <li class="dropdown #services"><a href="services.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="services.html#jump-one">STI Screening Package</a></li>
-                <li><a href="services.html#jump-two">Vaccinations</a></li>
-                <li><a href="services.html#jump-three">Birth Control / Family Planing</a></li>
-                <li><a href="services.html#jump-four">Vitamin Therapy</a></li>
-                <li><a href="services.html#jump-five">Pharmaceutical</a></li>
-                <li><a href="services.html#jump-six">Reproductive Health Care</a></li>
+                <li><a href="services.html#services">Our Services</a></li>
+                <li><a href="services.html#pricing">STI Screening Package</a></li>
+                <li><a href="services.html#infections">Common Infections</a></li>
               </ul>
             </li>
-            <li><a href="#"  class="active">Corporate Care</a></li>
+            <li class="dropdown #corporatecare"><a class="active" href="#"><span>Corporate Care</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="corporatecare.html#vaccinations">Vaccinations</a></li>
+                <li><a href="corporatecare.html#birthcontrol">Birth Control / Family Planing</a></li>
+                <li><a href="corporatecare.html#vitamintherapy">Vitamin Therapy</a></li>
+                <li><a href="corporatecare.html#coktailbenefits">Cocktail sets and Benefits</a></li>
+              </ul>
+            </li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="faq.html">FAQs</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -132,6 +136,10 @@
 
       </div><!-- End Main Section -->
 
+    </section><!-- Infections Section -->
+
+    <!-- Features Section -->
+    <section id="corporateservice" class="features section">
        <!-- Section Title -->
        <div class="container section-title" data-aos="fade-up">
         <h2>Our Corporate Health Services</h2>
@@ -149,9 +157,9 @@
 
           <div class="row g-4">
 
-            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="300">
+            <div class="col-lg-6" id="vaccinations" data-aos="fade-right" data-aos-delay="300">
               <div class="advanced-feature-card">
-                <div class="feature-content">
+                <div class="feature-content" >
                   <h5>Vaccinations</h5>
                   <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
                     <div class="featured-image-container">
@@ -212,9 +220,9 @@
               </div>
             </div>
 
-            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="500">
+            <div class="col-lg-6" id="vitamintherapy" data-aos="fade-right" data-aos-delay="500">
               <div class="advanced-feature-card">
-                <div class="feature-content">
+                <div class="feature-content" >
                   <h5>Vitamin Therapy</h5>
                   <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
                     <div class="featured-image-container">
@@ -241,9 +249,9 @@
               </div>
             </div>
 
-            <div class="col-lg-6" data-aos="fade-left" data-aos-delay="600">
+            <div class="col-lg-6" id="birthcontrol" data-aos="fade-left" data-aos-delay="600">
               <div class="advanced-feature-card">
-                <div class="feature-content">
+                <div class="feature-content" >
                   <h5>Birth Control/Family planning services</h5>
                   <h6>The choice is completely yours</h6>
                   <p>
@@ -406,7 +414,7 @@
     </section><!-- Infections Section -->
 
     <!-- Pricing Section -->
-    <section id="pricing" class="pricing section">
+    <section id="coktailbenefits"  class="pricing section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
