--- a/V1.0/contact.html
+++ b/V1.0/contact.html
@@ -208,8 +208,8 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt=""> -->
-              <h3>Saul Goodman</h3>
-              <h4>Store Owner</h4>
+              <h3>Adaku</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
               </div>
@@ -232,8 +232,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="testimonial-item">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
+              <h3>Adesina</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
@@ -255,8 +255,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="testimonial-item">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
+              <h3>Bello</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
@@ -274,8 +274,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="testimonial-item">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <h3>Joshua</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
               </div>
@@ -292,8 +292,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="testimonial-item">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
+              <h3>Abimbola</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
@@ -314,8 +314,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="testimonial-item">
-              <h3>Emily Harison</h3>
-              <h4>Store Owner</h4>
+              <h3>Avvie</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
@@ -335,8 +335,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="testimonial-item">
-              <h3>Emily Harison</h3>
-              <h4>Store Owner</h4>
+              <h3>Caberraah</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
@@ -355,8 +355,8 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="testimonial-item">
-              <h3>Emily Harison</h3>
-              <h4>Store Owner</h4>
+              <h3>Chioma</h3>
+              <h4></h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
               </div>
@@ -366,6 +366,46 @@
                   PinkClinic provides a safe space for everyone. 
                   Thank you, PinkClinic, for offering a secure environment where individuals can openly discuss and address their sexual health challenges. 
                   Your privacy is absolutely assured with PinkClinic. I highly commend them for their service.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Obi</h3>
+              <h4></h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  I had a great experience at this clinic. The staff were incredibly professional, 
+                  kind, and made me feel well cared for from start to finish.
+                  It's clear they truly care about their patients.<br>
+                  Highly recommend to anyone looking for quality compassionate care.
+                </span>
+                <i class="bi bi-quote quote-icon-right"></i>
+              </p>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="testimonial-item">
+              <h3>Amaechi</h3>
+              <h4></h4>
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+              </div>
+              <p>
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>
+                  I've been trying to come to your office but work has been tight. 
+                  Dunno if I can do online consultations.<br> 
+                  Thanks so much, I'm able to have pain free sex now.<br> 
+                  You're the best.
                 </span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
